try making apgar 1 a number

--- a/Postpartum.html
+++ b/Postpartum.html
@@ -259,10 +259,10 @@
   
 <h3>Additional Maternal Postpartum Checks:</h3>
 <div>
-	<input type="range" name="APGAR1" id="APGAR1" min="0" max="10"> APGAR score 1 minute after birth
+	<input type="number" name="APGAR1" id="APGAR1" min="0" max="10" step="1"> APGAR score 1 minute after birth
 </div>
 <div>
-	<input type="range" name="APGAR5" id="APGAR5" min="0" max="10"> APGAR score 5 minutes after birth
+	<input type="range" name="APGAR5" id="APGAR5" min="0" max="10" step="1"> APGAR score 5 minutes after birth
 </div>
 <div>
 	<input type="checkbox" name="FD01" id="FD01" value=1 !checked> Fetal death
