testing apgar 1 as radio

--- a/Postpartum.html
+++ b/Postpartum.html
@@ -281,20 +281,21 @@
   
 <h3>Additional Maternal Postpartum Checks:</h3>
 <div>
-	<input type="range" name="APGAR1" id="APGAR1" list="tickmarks"> APGAR score 1 minute after birth
-<datalist id="tickmarks">
-  <option value=0 label="0"></option>
-  <option value=1></option>
-  <option value=2></option>
-  <option value=3></option>
-  <option value=4></option>
-  <option value=5 label="5"></option>
-  <option value=6></option>
-  <option value=7></option>
-  <option value=8></option>
-  <option value=9></option>
-  <option value=10 label="10"></option>
-</datalist>
+	APGAR score 1 minute after birth: 
+<input type="radio" name="APGAR1" value=0 checked> Unknown
+<input type="radio" name="APGAR1" value=0> 0
+<input type="radio" name="APGAR1" value=1> 1
+<input type="radio" name="APGAR1" value=2> 2
+<input type="radio" name="APGAR1" value=3> 3
+<input type="radio" name="APGAR1" value=4> 4
+<input type="radio" name="APGAR1" value=5> 5
+<input type="radio" name="APGAR1" value=6> 6
+<input type="radio" name="APGAR1" value=7> 7
+<input type="radio" name="APGAR1" value=8> 8
+<input type="radio" name="APGAR1" value=9> 9
+<input type="radio" name="APGAR1" value=10> 10
+	
+
 </div>
 <div>
 	<input type="range" name="APGAR5" id="APGAR5" list="tickmarks" value=0> APGAR score 5 minutes after birth
