--- a/Postpartum.html
+++ b/Postpartum.html
@@ -281,7 +281,7 @@
   
 <h3>Additional Maternal Postpartum Checks:</h3>
 <div>
-	APGAR score 1 minute after birth: 
+	<p>APGAR score at 1 minute:</p> 
 <input type="radio" name="APGAR1" value=0 checked> Unknown
 <input type="radio" name="APGAR1" value=0> 0
 <input type="radio" name="APGAR1" value=1> 1
@@ -294,25 +294,24 @@
 <input type="radio" name="APGAR1" value=8> 8
 <input type="radio" name="APGAR1" value=9> 9
 <input type="radio" name="APGAR1" value=10> 10
+</div>
 	
-
-</div>
 <div>
-	<input type="range" name="APGAR5" id="APGAR5" list="tickmarks" value=0> APGAR score 5 minutes after birth
-<datalist id="tickmarks">
-  <option value=0 label="0"></option>
-  <option value=1></option>
-  <option value=2></option>
-  <option value=3></option>
-  <option value=4></option>
-  <option value=5 label="5"></option>
-  <option value=6></option>
-  <option value=7></option>
-  <option value=8></option>
-  <option value=9></option>
-  <option value=10 label="10"></option>
-</datalist>
+<p>APGAR score at 5 minutes:</p>
+<input type="radio" name="APGAR5" value=0 checked> Unknown
+<input type="radio" name="APGAR5" value=0> 0
+<input type="radio" name="APGAR5" value=1> 1
+<input type="radio" name="APGAR5" value=2> 2
+<input type="radio" name="APGAR5" value=3> 3
+<input type="radio" name="APGAR5" value=4> 4
+<input type="radio" name="APGAR5" value=5> 5
+<input type="radio" name="APGAR5" value=6> 6
+<input type="radio" name="APGAR5" value=7> 7
+<input type="radio" name="APGAR5" value=8> 8
+<input type="radio" name="APGAR5" value=9> 9
+<input type="radio" name="APGAR5" value=10> 10
 </div>
+	
 <div>
 	<input type="checkbox" name="FD01" id="FD01" value=1 !checked> Fetal death
 </div>
