--- a/PeripartumResults.html
+++ b/PeripartumResults.html
@@ -302,16 +302,16 @@
 	var HEM_Risk = P_HEM*100.0;
 	    
 	resultsList.append(document.createElement('br'))    
-   	resultsList.append('MAP Assessment:');
+   	resultsList.append('MAP Assessment*:');
 	resultsList.append(document.createElement('br'))
 	resultsList.append(MAP_TRANS);
 	resultsList.append(document.createElement('br'))
-	resultsList.append('Estimated Risk: ');
+	resultsList.append('Estimated Risk (out of 100): ');
 	resultsList.append(TRANS_Risk.toFixed(1)); //'Transfusion Risk Estimate: ' + num.toString(Math.round(P_TRANS*100)))
 	resultsList.append(document.createElement('br'))
 	resultsList.append(MAP_HEM);
 	resultsList.append(document.createElement('br'))
-	resultsList.append('Estimated Risk: ');
+	resultsList.append('Estimated Risk (out of 100): ');
 	resultsList.append(HEM_Risk.toFixed(1)); //'Hemorrhage Risk Estimate: ' + num.toString(Math.round(P_HEM*100)))
 	resultsList.append(document.createElement('br'))
 	resultsList.append(document.createElement('br'))
@@ -325,6 +325,8 @@
         resultsList.append(`${name}: ${value}`)
         resultsList.append(document.createElement('br'))
     	})
+	resultsList.append(document.createElement('br'))
+	resultsList.append('*Disclaimer: This work has not been prospectively tested at this time.')	
 	    
     </script>
 </body>
