--- a/AntepartumResults.html
+++ b/AntepartumResults.html
@@ -296,7 +296,7 @@
         resultsList.append(`${name}: ${value}`)
         resultsList.append(document.createElement('br'))
     	})
-	    
+	resultsList.append(document.createElement('br'))    
 	resultsList.append('*Disclaimer: The MAP assessment has not been prospectively tested at this time.')
 	    
     </script>
