--- a/Postpartum.html
+++ b/Postpartum.html
@@ -294,7 +294,7 @@
 <input type="radio" name="APGAR1" value=8> 8
 <input type="radio" name="APGAR1" value=9> 9
 <input type="radio" name="APGAR1" value=10> 10
-<input type="radio" name="APGAR1" value=0 checked> Unknown
+<input type="radio" name="APGAR1" value='Unknown' checked> Unknown
 </div>
 	<br>	
 <div>
@@ -310,7 +310,7 @@
 <input type="radio" name="APGAR5" value=8> 8
 <input type="radio" name="APGAR5" value=9> 9
 <input type="radio" name="APGAR5" value=10> 10
-<input type="radio" name="APGAR5" value=0 checked> Unknown
+<input type="radio" name="APGAR5" value='Unknown' checked> Unknown
 </div>
 
 	<br>
