--- a/PostpartumResults.html
+++ b/PostpartumResults.html
@@ -73,12 +73,12 @@
             content: attr(data-errormsg);
         }
     </style>
-    <title>Peripartum Results</title>
+    <title>Postpartum Results</title>
 </head>
 <body>
-<h1>Peripartum Results</h1>
+<h1>Postpartum Results</h1>
     <div id="results"></div>
-    <a href="/Peripartum.html">Back to Peripartum Assessment Form</a>
+    <a href="/Postpartum.html">Back to Postpartum Assessment Form</a>
 	<br>
     <a href="/">Back to Home</a>
     <script>
