updated and alphebetized

--- a/Postpartum.html
+++ b/Postpartum.html
@@ -172,6 +172,10 @@
 </div>
 	
 <div>
+	<input type="checkbox" name="HYP01" id="HYP01" value=1 !checked> Chronic hypertension
+</div>
+	
+<div>
 	<input type="checkbox" name="DIAB01" id="DIAB01" value=1 !checked> Diabetes (type I, type II, gestational)
 </div>
 	
@@ -194,9 +198,9 @@
 <div>
 	<input type="checkbox" name="HD01" id="HD01" value=1 !checked> Heart disease (congenital, rheumatic, myocarditis/cardiomyopathy, valve disorder, artificial valves, or other) 
 </div>
-	
+
 <div>
-	<input type="checkbox" name="HYP01" id="HYP01" value=1 !checked> Chronic hypertension
+	<input type="checkbox" name="RENINS01" id="RENINS01" value=1 !checked> Infant renal insufficiency
 </div>
 	
 <div>
@@ -205,6 +209,14 @@
 	
 <div>
 	<input type="checkbox" name="MINFERT01" id="MINFERT01" value=1 !checked> Maternal infertility
+</div>
+
+<div>
+	<input type="checkbox" name="RENALA01" id="RENALA01" value=1 !checked> Maternal renal abnormality (glomerulonephritis, pyelonephritis, lupus nephritis, nephrotic syndromes, nephrolithiasis, transplant, renal abscess, or other)
+</div>
+		
+<div>
+	<input type="checkbox" name="RENF01" id="RENF01" value=1 !checked> Maternal acute renal failure
 </div>
 	
 <div>
@@ -217,18 +229,6 @@
 	
 <div>
 	<input type="checkbox" name="PREC01" id="PREC01" value=1 !checked> Preeclampsia
-</div>
-	
-<div>
-	<input type="checkbox" name="RENALA01" id="RENALA01" value=1 !checked> Renal abnormality (glomerulonephritis, pyelonephritis, lupus nephritis, nephrotic syndromes, nephrolithiasis, transplant, renal abscess, or other)
-</div>
-	
-<div>
-	<input type="checkbox" name="RENINS01" id="RENINS01" value=1 !checked> Infant renal insufficiency
-</div>
-	
-<div>
-	<input type="checkbox" name="RENF01" id="RENF01" value=1 !checked> Maternal acute renal failure
 </div>
 	
 <div>
@@ -254,6 +254,14 @@
   
 <h3>Additional Maternal Peripartum Checks:</h3>
 <div>
+	<input type="checkbox" name="RDIS01" id="RDIS01" value=1 !checked> Acute respiratory distress
+</div>  
+  
+<div>
+	<input type="checkbox" name="SICKLCR01" id="SICKLCR01" value=1 !checked> Acute sickle cell crisis
+</div>
+	
+<div>
 	<input type="checkbox" name="CES01" id="CES01" value=1 !checked> Cesarean section
 </div>
   
@@ -265,13 +273,7 @@
 	<input type="checkbox" name="PROL01" id="PROL01" value=1 !checked> Prolonged labor
 </div>
   
-<div>
-	<input type="checkbox" name="RDIS01" id="RDIS01" value=1 !checked> Respiratory distress
-</div>  
-  
-<div>
-	<input type="checkbox" name="SICKLCR01" id="SICKLCR01" value=1 !checked> Sickle cell crisis
-</div>
+
 <br>
 	
 	
@@ -331,17 +333,17 @@
 	<input type="checkbox" name="DYST01" id="DYST01" value=1 !checked> Shoulder dystocia
 </div>			
 <div>
-	<input type="checkbox" name="UMBPROLPS01" id="UMBPROLPS01" value=1 !checked> Umbilical proplapse
+	<input type="checkbox" name="UMBPROLPS01" id="UMBPROLPS01" value=1 !checked> Umbilical cord prolapse
 </div>
 <div>
-	<input type="checkbox" name="UR01" id="UR01" value=1 !checked> Uterine ruptures
+	<input type="checkbox" name="UR01" id="UR01" value=1 !checked> Uterine rupture
 </div>
 <div>
 	<input type="checkbox" name="VLAC01" id="VLAC01" value=1 !checked> Vaginal laceration
 </div>
 	
 <div>
-	<input type="checkbox" name="VENT01" id="VENT01" value=1 !checked> Ventalation needed
+	<input type="checkbox" name="VENT01" id="VENT01" value=1 !checked> Ventilation needed
 </div>	
 <br>
 <br>
