--- a/Peripartum.html
+++ b/Peripartum.html
@@ -163,6 +163,10 @@
 </div>
 	
 <div>
+	<input type="checkbox" name="HYP01" id="HYP01" value=1 !checked> Chronic hypertension
+</div>
+	
+<div>
 	<input type="checkbox" name="DIAB01" id="DIAB01" value=1 !checked> Diabetes (type I, type II, gestational)
 </div>
 	
@@ -185,9 +189,9 @@
 <div>
 	<input type="checkbox" name="HD01" id="HD01" value=1 !checked> Heart disease (congenital, rheumatic, myocarditis/cardiomyopathy, valve disorder, artificial valves, or other) 
 </div>
-	
+
 <div>
-	<input type="checkbox" name="HYP01" id="HYP01" value=1 !checked> Chronic hypertension
+	<input type="checkbox" name="RENINS01" id="RENINS01" value=1 !checked> Infant renal insufficiency
 </div>
 	
 <div>
@@ -196,6 +200,14 @@
 	
 <div>
 	<input type="checkbox" name="MINFERT01" id="MINFERT01" value=1 !checked> Maternal infertility
+</div>
+
+<div>
+	<input type="checkbox" name="RENALA01" id="RENALA01" value=1 !checked> Maternal renal abnormality (glomerulonephritis, pyelonephritis, lupus nephritis, nephrotic syndromes, nephrolithiasis, transplant, renal abscess, or other)
+</div>
+		
+<div>
+	<input type="checkbox" name="RENF01" id="RENF01" value=1 !checked> Maternal acute renal failure
 </div>
 	
 <div>
@@ -211,18 +223,6 @@
 </div>
 	
 <div>
-	<input type="checkbox" name="RENALA01" id="RENALA01" value=1 !checked> Renal abnormality (glomerulonephritis, pyelonephritis, lupus nephritis, nephrotic syndromes, nephrolithiasis, transplant, renal abscess, or other)
-</div>
-	
-<div>
-	<input type="checkbox" name="RENINS01" id="RENINS01" value=1 !checked> Infant renal insufficiency
-</div>
-	
-<div>
-	<input type="checkbox" name="RENF01" id="RENF01" value=1 !checked> Maternal acute renal failure
-</div>
-	
-<div>
 	<input type="checkbox" name="SICKL01" id="SICKL01" value=1 !checked> Sickle cell trait
 </div>
 	
@@ -234,8 +234,24 @@
 	<input type="checkbox" name="UTI01" id="UTI01" value=1 !checked> Urinary tract infection
 </div>
 <br>
+	
+	
+	
+	
+	
+	
+	
+	
   
 <h3>Additional Maternal Peripartum Checks:</h3>
+<div>
+	<input type="checkbox" name="RDIS01" id="RDIS01" value=1 !checked> Acute respiratory distress
+</div>  
+  
+<div>
+	<input type="checkbox" name="SICKLCR01" id="SICKLCR01" value=1 !checked> Acute sickle cell crisis
+</div>
+	
 <div>
 	<input type="checkbox" name="CES01" id="CES01" value=1 !checked> Cesarean section
 </div>
@@ -247,15 +263,8 @@
 <div>
 	<input type="checkbox" name="PROL01" id="PROL01" value=1 !checked> Prolonged labor
 </div>
-  
-<div>
-	<input type="checkbox" name="RDIS01" id="RDIS01" value=1 !checked> Respiratory distress
-</div>  
-  
-<div>
-	<input type="checkbox" name="SICKLCR01" id="SICKLCR01" value=1 !checked> Sickle cell crisis
-</div>
-  
+ 
+<br>
   
 <div class="form-box">
   <button type="reset">Reset</button>
