--- a/Antepartum.html
+++ b/Antepartum.html
@@ -164,6 +164,10 @@
 </div>
 	
 <div>
+	<input type="checkbox" name="HYP01" id="HYP01" value=1 !checked> Chronic hypertension
+</div>
+	
+<div>
 	<input type="checkbox" name="DIAB01" id="DIAB01" value=1 !checked> Diabetes (type I, type II, gestational)
 </div>
 	
@@ -186,9 +190,9 @@
 <div>
 	<input type="checkbox" name="HD01" id="HD01" value=1 !checked> Heart disease (congenital, rheumatic, myocarditis/cardiomyopathy, valve disorder, artificial valves, or other) 
 </div>
-	
+
 <div>
-	<input type="checkbox" name="HYP01" id="HYP01" value=1 !checked> Chronic hypertension
+	<input type="checkbox" name="RENINS01" id="RENINS01" value=1 !checked> Infant renal insufficiency
 </div>
 	
 <div>
@@ -197,6 +201,14 @@
 	
 <div>
 	<input type="checkbox" name="MINFERT01" id="MINFERT01" value=1 !checked> Maternal infertility
+</div>
+
+<div>
+	<input type="checkbox" name="RENALA01" id="RENALA01" value=1 !checked> Maternal renal abnormality (glomerulonephritis, pyelonephritis, lupus nephritis, nephrotic syndromes, nephrolithiasis, transplant, renal abscess, or other)
+</div>
+		
+<div>
+	<input type="checkbox" name="RENF01" id="RENF01" value=1 !checked> Maternal acute renal failure
 </div>
 	
 <div>
@@ -209,18 +221,6 @@
 	
 <div>
 	<input type="checkbox" name="PREC01" id="PREC01" value=1 !checked> Preeclampsia
-</div>
-	
-<div>
-	<input type="checkbox" name="RENALA01" id="RENALA01" value=1 !checked> Renal abnormality (glomerulonephritis, pyelonephritis, lupus nephritis, nephrotic syndromes, nephrolithiasis, transplant, renal abscess, or other)
-</div>
-	
-<div>
-	<input type="checkbox" name="RENINS01" id="RENINS01" value=1 !checked> Infant renal insufficiency
-</div>
-	
-<div>
-	<input type="checkbox" name="RENF01" id="RENF01" value=1 !checked> Maternal acute renal failure
 </div>
 	
 <div>
